# routix

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  SOLUTION_MANAGER_CHANGES.md  pyproject.toml  subroutine_flow_data.md
clad/: __init__.py  custom_cp_model.py  dynamic_data_object.py  subroutine_controller.py
clad/cpsat/: custom_cp_model.py
docs/: 20260429_artifact_manager.md  20260528_resource_monitor.md  20260702_laadi_plan.md  20260703_laadi_ccdeJava_review.md  20260707_laadi_deps_and_cpu_budget.md
docs/laadi/: 20260702_laadi_plan.md  20260703_ccdeJava_review.md  20260707_deps_and_cpu_budget.md  20260710_gbrain_new_repo_opinion.md  AGENTS.md
plans/: logger-injection-hooks.md
src/clad/: __init__.py  experiment_summary.py  solver_output_summary.py  solver_status.py  subroutine_controller.py  timer.py
src/routix/: __init__.py  concurrent_util.py  constants.py  dynamic_data_object.py  elapsed_timer.py  experiment_summary.py  io.py  logging.py  solution_manager.py  subroutine_controller.py  subroutine_flow_validator.py  type_defs.py  utils.py
tests/: test_concurrent.py  test_custom_cp_model.py  test_dynamic_data_object.py  test_elapsed_timer.py  test_logger_injection.py  test_logging.py  test_metric_time_series.py  test_metric_time_series_notes.py  test_named_time_series_store.py  test_named_time_series_store_notes.py  test_packaging.py  test_runner_failure.py  test_solution_manager.py  test_subroutine_controller.py  test_subroutine_flow_validator.py  test_subroutine_flow_validator_normalize.py  test_util_comparison.py
tests/io/: test_artifact_layout.py  (+3 more)
(+32 files in other folders)
